force-app/main/default/objects/ARTL_ClickToCall__c/ARTL_ClickToCall__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ARTL_ClickToCall</label>
</CustomObject>