force-app/main/default/objects/ARTL_ClickToCall__c/fields/Authentication__c.field-meta.xml
<CustomField>
    <fullName>Authentication__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authentication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>