force-app/main/default/objects/ARTL_ClickToCall__c/fields/callFlowId__c.field-meta.xml
<CustomField>
    <fullName>callFlowId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>callFlowId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>